# uvc_camera_driver

./: CMakeLists.txt  README.md  package.xml
cfg/: CameraParams.cfg
cmake/: CompilerOptimizations.cmake  HardwareAccel.cmake  PlatformDetect.cmake
config/: camera_params.yaml  multi_camera.yaml
include/uvc_camera_driver/: camera_info_parser.h  camera_node.h  camera_thread.h  jpeg_decoder.h  jpeg_decoder_mpp.h  jpeg_decoder_nvjpeg.h  jpeg_decoder_turbo.h  sync_manager.h  v4l2_camera.h
launch/: multi_camera_sync.launch  single_camera.launch
src/: camera_info_parser.cpp  camera_node.cpp  camera_thread.cpp  jpeg_decoder_mpp.cpp  jpeg_decoder_nvjpeg.cpp  jpeg_decoder_turbo.cpp  main.cpp  sync_manager.cpp  v4l2_camera.cpp
