<?xml version="1.0"?>
<package format="2">
  <name>uvc_camera_driver</name>
  <version>1.0.0</version>
  <description>
    ROS V4L2 多相机同步驱动程序。支持 DMABUF/MMAP 零拷贝、
    libjpeg-turbo/NVJPEG 硬解、多相机硬件同步触发、CPU 核心绑定。
  </description>

  <maintainer email="user@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS 依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <!-- 系统依赖 -->
  <build_depend>libv4l-dev</build_depend>
  <exec_depend>libv4l-0</exec_depend>

  <export></export>
</package>
